style(checkbox, toast): fix text not align

--- a/src/components/checkbox/style/index.less
+++ b/src/components/checkbox/style/index.less
@@ -89,6 +89,7 @@
 
   & + span {
     margin-left: 8px;
+    vertical-align: middle;
   }
 
   .@{checkbox-inner-prefix-cls} {
